--- a/src/app/styles/messages.scss
+++ b/src/app/styles/messages.scss
@@ -35,7 +35,7 @@
 
   .contactInfo {
     border-bottom: 1px solid white;
-    margin: 40px 20px;
+    margin: 10px;
     width: 80%;
     transition: 1s ease-in-out;
 
@@ -65,7 +65,6 @@
 }
 
 .float-right {
-  margin-left: 70%;
   margin-top: -20px;
   font-size: 0.8em;
   text-decoration: underline;
@@ -107,6 +106,6 @@
 }
 
 .messages {
-  height: 87%;
+  height: 85%;
   overflow: auto;
 }
